# factorio-draftsman

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  changelog.md  extract_data.lua  factorio_version_testing.py  justfile  merging.txt  prep.py  profiler.py  pyproject.toml  pyvenv.cfg  questions_for_factorio_devs.md  requirements.txt  setup.py  temp.py  test.py  tox.ini  update_data.py  update_module.py  view.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  environment_ci.yml  push_ci.yml  release_ci.yml  wheels.yml  workflow.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  control_behavior.txt  data.rst  index.rst  quickstart.rst
draftsman/: __init__.py  _factorio_version.py  _version.py  blueprint.py  blueprintable.py  constants.py  entity.py  env.py  error.py  errors.py  extras.py  group.py  rail.py  schemas.py  serialization.py  signal.py  signalID.py  signatures.py  tile.py  types.py  utils.py  validators.py  warning.py
draftsman/classes/: __init__.py  association.py  blueprint.py  blueprint_book.py  blueprintable.py  blueprintbook.py  collection.py  collision_set.py  collisionset.py  deconstruction_planner.py  entity.py  entity_like.py  entity_list.py  entitylike.py  entitylist.py  exportable.py  group.py  queryable.py  rail_planner.py  railplanner.py  schedule.py  schedule_list.py  schedulelist.py  spatial_data_structure.py  spatial_hashmap.py  spatial_like.py  spatialhashmap.py  spatiallike.py  tile.py  tile_list.py  tilelist.py  train_configuration.py  transformable.py  upgrade_planner.py  validatable.py  vector.py
draftsman/compatability/: compatability.lua  extract_data.lua
draftsman/compatibility/: defines.lua  interface.lua  serpent.lua  settings.lua
draftsman/data/: entities.pkl  entities.py  equipment.pkl  equipment.py  fluids.pkl  fluids.py  instruments.pkl  instruments.py  items.pkl  items.py  mods.pkl  mods.py  modules.pkl  modules.py  planets.pkl  planets.py  qualities.pkl  qualities.py  recipes.pkl  recipes.py  signals.pkl  signals.py  tiles.pkl  tiles.py
draftsman/environment/: mod_list.py  mod_settings.py  script.py  update.py
draftsman/prototypes/: accumulator.py  agricultural_tower.py  ammo_turret.py  arithmetic_combinator.py  artillery_turret.py  artillery_wagon.py  assembling_machine.py  asteroid_collector.py  beacon.py  boiler.py  burner_generator.py  car.py  cargo_bay.py  cargo_landing_pad.py  cargo_wagon.py  constant_combinator.py  container.py  curved_rail.py  curved_rail_a.py  curved_rail_b.py  decider_combinator.py  display_panel.py  electric_energy_interface.py  electric_pole.py  electric_turret.py  elevated_curved_rail_a.py  elevated_curved_rail_b.py  elevated_half_diagonal_rail.py  elevated_straight_rail.py  filter_inserter.py  fluid_turret.py  fluid_wagon.py  furnace.py  fusion_generator.py  fusion_reactor.py  gate.py  generator.py  half_diagonal_rail.py  heat_interface.py  heat_pipe.py  (+53 more)
draftsman/tests/: test_blueprint.py  test_blueprintable.py  test_blueprintbook.py  test_entity.py  test_group.py  test_mixins.py  test_spatialhashmap.py  test_tilelist.py  test_utils.py  test_version.py
examples/: 1KiB_sector_ROM.py  1bit_lcd_builder.py  README.md  almost_everything.py  beacon_memory_builder.py  blueprint_operands.py  circuit_diagram.py  combinator_ascii.py  combinator_text.py  decider_bit_checker.py  decider_combinator_usage.py  draftsman_logo.py  filtered_train.py  find_trains_filtered.py  flip_belts.py  image_converter.py  item_requester.py  item_stack_signals.py  lamp_picture.py  legacy_rail_planner_usage.py  ltn_train_stop.py  pumpjack_placer.py  rail_planner_usage.py  read_prototype.py  readme.py  readme_example.py  recipe_types.py  reverse_belts.py  revision_history_experiment.py  seisras.py  signal_id.py  signal_index.py  sqrt_lut.py  tedius_inserters.py  train_configuration.py  train_configuration_usage.py  train_schedule_usage.py
examples/assets/: example.mid
factoriotools/: __init__.py  _factorio_version.py  _version.py  blueprint.py  compatability.lua  entity.py  entity_data.py  errors.py  signalID.py  signal_data.py  signals.py  signatures.py  tile.py  utils.py
test/: conftest.py  test_all_factorio_versions.py  test_association.py  test_blueprint.py  test_blueprint.py.bak  test_blueprint_book.py  test_blueprintable.py  test_blueprintable.py.bak  test_blueprintbook.py  test_blueprintbook.py.bak  test_collision_set.py  test_collisionset.py  test_constants.py  test_data.py  test_decider_combinator_serialization.py  test_deconstruction_planner.py  test_deconstruction_planner.py.bak  test_entity.py  test_entity_list.py  test_entitylist.py  test_entitylist.py.bak  test_environment.py  test_examples.py  test_group.py  test_group.py.bak  test_keylist.py  test_mixins.py  test_rail_planner.py  test_schedule.py  test_schedule_list.py  test_serialization.py  test_signal.py  test_signatures.py  test_spatial_hash_map.py  test_spatialhashmap.py  test_tile.py  test_tile.py.bak  test_tile_list.py  test_tilelist.py  test_train_configuration.py  (+6 more)
(+515 files in other folders)
