[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-draftsman"
dynamic = ["version"]
description = "A complete, well-tested, and up-to-date module to manipulate Factorio blueprint strings. Compatible with mods."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["factorio", "blueprint", "string"]
authors = [
    { name = "redruin01" }
]
dependencies = [
    "attrs >= 25.3.0",
    "cattrs >= 24.1.3",
    "lupa >= 2.0",
    "GitPython >= 3.1.43",
    "thefuzz >= 0.20.0",
    "enum_tools >= 0.13.0",
    "typing",
    "typing_extensions; python_version < '3.8'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/redruin1/factorio-draftsman"
Documentation = "https://factorio-draftsman.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/redruin1/factorio-draftsman/issues"
Changelog = "https://github.com/redruin1/factorio-draftsman/blob/main/changelog.md"

[project.scripts]
draftsman = "draftsman.environment.script:main"

[dependency-groups]
test = ["pytest >= 7.1.3", "coverage >= 6.4", "tox >= 4.4.7", "jsonschema >= 4.23.0"]
lint = ["black >= 22.3.0", "ruff >= 0.12.0"]
docs = ["sphinx"]
dev  = [
    {include-group = "lint"}, 
    {include-group = "test"}, 
    {include-group = "docs"}
]

[tool.setuptools.dynamic]
version = {attr = "draftsman._version.__version__"}

# [tool.setuptools.packages.find]
# where = ["draftsman/"]
# 'draftsman', 
# 'draftsman.classes', 
# 'draftsman.classes.mixins',
# 'draftsman.environment',
# 'draftsman.data',
# 'draftsman.prototypes'

[tool.setuptools.package-data]
draftsman = [
    "draftsman/factorio-data/*", 
    "draftsman/compatibility/*", 
    "draftsman/data/*"
]